Fixed logo size on tablet devices

--- a/public/css/queries.css
+++ b/public/css/queries.css
@@ -147,6 +147,10 @@
     .home_page h1.home_title {
         margin-top: 35px;
     }
+
+    .navbar-brand img {
+      height: 40px;
+    }
 }
 
 @media (max-width: 992px) {
